<resources>
    <string name="app_name">PokemonApp</string>

    <!-- activity_pokemon_list  -->
    <string name="pokemon_title">Pokemon</string>
    <string name="pokeball">Pokeball</string>
    <string name="no_pokemons">No pokemons</string>
    <string name="add_pokemons">To add some pokemons,\n press + icon.</string>

    <!-- menu_add_button.xml  -->
    <string name="add">Add</string>

    <!-- activity_add_pokemon  -->
    <string name="add_pokemon_title">Add new Pokemon</string>
    <string name="save">Save</string>
    <string name="read_external_permission_explanation">You need to allow this application to read external storage so
        you could add pokemon image.</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>

    <!-- activity_details  -->
    <string name="details_title">Details</string>
    <string name="height_in_meters">%1$sm</string>
    <string name="weight_in_kilos">%1$skg</string>

    <!-- activity_login && activity_sign_up  -->
    <string name="internet_permission_explanation">You need to allow this application to connect to internet so
        you could see pokemon list and add new pokemons.</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="nickname">Nickname</string>
    <string name="confirm_password">Confirm password</string>

    <!-- pokemon attributes  -->
    <string name="pokemon_name">Name</string>
    <string name="pokemon_height">Height</string>
    <string name="pokemon_weight">Weight</string>
    <string name="pokemon_category">Category</string>
    <string name="pokemon_abilities">Abilities</string>
    <string name="pokemon_gender">Gender</string>
    <string name="pokemon_description">Description</string>
    <string name="pokemon_image">Pokemon image</string>

    <!-- error messages  -->
    <string name="pokemon_already_exists">Pokemon %1$s already exists</string>
    <string name="image_not_found">Image not found</string>
    <string name="name_null">Name cannot be null</string>
    <string name="name_empty">Name cannot be empty</string>
    <string name="height_positive">Height must be positive</string>
    <string name="weight_positive">Weight must be positive</string>
    <string name="category_null">Category cannot be null</string>
    <string name="category_empty">Category cannot be empty</string>
    <string name="abilities_null">Abilities cannot be null</string>
    <string name="abilities_empty">Abilities cannot be empty</string>
    <string name="gender_null">Gender cannot be null</string>
    <string name="gender_empty">Gender cannot be empty</string>
    <string name="description_null">Description cannot be null</string>
    <string name="description_empty">Description cannot be empty</string>
    <string name="image_null">Image cannot be null</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cannot_be_empty">This field can not be empty</string>
    <string name="login_invalid_email_password">Invalid email or password</string>
    <string name="login_fail">Failed to login</string>
    <string name="sign_up_fail">Failed to create user</string>

    <string name="permission">Permissions</string>

    <!-- pokemon interactor error messages -->
    <string name="get_pokemon_fail">Failed to load pokemons</string>
    <string name="get_pokemons_fail_db">Failed to load pokemon cache</string>
    <string name="get_categories_fail">Failed to load pokemon categories</string>
    <string name="get_categories_fail_db">Failed to load pokemon categories cache</string>
    <string name="get_abilities_fail">Failed to load pokemon abilities</string>
    <string name="get_abilities_fail_db">Failed to load pokemon abilities cache</string>

    <string name="login_fail_no_internet">You cannot login without internet connection\nCached copy of list
        will be shown if there is any</string>
    <string name="sign_up_no_internet">You cannot sign up without internet connection</string>
    <string name="pokemon_create_fail">Failed to create pokemon</string>
    <string name="add_pokemon_fail_no_connection">You cannot add pokemon while offline</string>
    <string name="refresh_fail_no_connection">You cannot refresh list while offline</string>

    <!-- image placeholders -->
    <string name="mail_icon">mail_icon</string>
    <string name="person_icon">person_icon</string>
    <string name="pokemon_sprite">pokemon_image</string>

</resources>
