<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PokemonListActivity">

    <hr.vrbic.karlo.pokemonapp.list.EmptyRecyclerView
        android:id="@+id/erv_pokemons"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"

        app:layoutManager="LinearLayoutManager">

    </hr.vrbic.karlo.pokemonapp.list.EmptyRecyclerView>

    <LinearLayout
        android:id="@+id/ll_empty_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pokeball"
            android:gravity="center"
            android:src="@drawable/pokeball_placeholder"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_pokemons"
            android:textSize="32sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_pokemons"
            android:textSize="24sp"/>
    </LinearLayout>
</RelativeLayout>
