<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hr.vrbic.karlo.pokemonapp.activities.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll_sign_up_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="8"
                    android:src="@drawable/ic_mail"
                    android:contentDescription="@string/mail_icon"/>

                <EditText
                    android:id="@+id/et_sign_up_mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/e_mail"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorTextParagraph"
                    android:textSize="@dimen/text_size_normal"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_sign_up_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_sign_up_mail"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="8"
                    android:src="@drawable/ic_person"
                    android:contentDescription="@string/person_icon"/>

                <EditText
                    android:id="@+id/et_sign_up_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/nickname"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorTextParagraph"
                    android:textSize="@dimen/text_size_normal"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_sign_up_nickname"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="8"
                    android:src="@drawable/ic_lock"/>

                <EditText
                    android:id="@+id/et_sign_up_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/colorTextParagraph"
                    android:textSize="@dimen/text_size_normal"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_sign_up_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_sign_up_password"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="8"/>

                <EditText
                    android:id="@+id/et_sign_up_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:textColor="@color/colorTextParagraph"
                    android:textSize="@dimen/text_size_normal"/>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_finish_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:text="@string/sign_up"
        android:textColor="@color/colorTextButton"
        android:textSize="@dimen/text_size_normal"/>

</RelativeLayout>
