<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddPokemonActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/sv_add_pokemon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_save">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:src="@drawable/ic_person_details"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/ll_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:orientation="horizontal"
                        android:paddingTop="@dimen/activity_vertical_margin">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginEnd="@dimen/activity_horizontal_margin"
                            android:src="@drawable/ic_person"/>

                        <EditText
                            android:id="@+id/et_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/pokemon_name"
                            android:inputType="textCapWords"
                            android:textColor="@color/colorTextParagraph"
                            android:textSize="@dimen/text_size_normal"/>
                    </LinearLayout>

                    <EditText
                        android:id="@+id/et_height"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:hint="@string/pokemon_height"
                        android:inputType="numberDecimal"
                        android:textColor="@color/colorTextParagraph"
                        android:textSize="@dimen/text_size_normal"/>

                    <EditText
                        android:id="@+id/et_weight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:hint="@string/pokemon_weight"
                        android:inputType="numberDecimal"
                        android:textColor="@color/colorTextParagraph"
                        android:textSize="@dimen/text_size_normal"/>

                    <EditText
                        android:id="@+id/et_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:hint="@string/pokemon_category"
                        android:inputType="textCapSentences"
                        android:textColor="@color/colorTextParagraph"
                        android:textSize="@dimen/text_size_normal"/>

                    <EditText
                        android:id="@+id/et_abilities"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:hint="@string/pokemon_abilities"
                        android:inputType="textCapSentences"
                        android:textColor="@color/colorTextParagraph"
                        android:textSize="@dimen/text_size_normal"/>

                    <EditText
                        android:id="@+id/et_gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:hint="@string/pokemon_gender"
                        android:inputType="textCapSentences"
                        android:textColor="@color/colorTextParagraph"
                        android:textSize="@dimen/text_size_normal"/>

                    <LinearLayout
                        android:id="@+id/ll_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginEnd="@dimen/activity_horizontal_margin"
                            android:src="@drawable/ic_description"/>

                        <EditText
                            android:id="@+id/et_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start|top"
                            android:hint="@string/pokemon_description"
                            android:inputType="textCapSentences|textMultiLine"
                            android:textColor="@color/colorTextParagraph"
                            android:textSize="@dimen/text_size_normal"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary"
            android:text="@string/save"
            android:textColor="@color/colorTextButton"
            android:textSize="16sp"/>
    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@drawable/ic_add"
        app:layout_anchor="@id/iv_image"
        app:layout_anchorGravity="bottom|right|end"/>

</android.support.design.widget.CoordinatorLayout>
