<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hr.vrbic.karlo.pokemonapp.activities.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_login">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_pokemon_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/pokemon_logo"/>

            <ImageView
                android:id="@+id/iv_pokeball"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/pokeball"/>

            <LinearLayout
                android:id="@+id/ll_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:src="@drawable/ic_mail"/>

                <EditText
                    android:id="@+id/et_mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|top"
                    android:hint="@string/e_mail"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:nextFocusDown="@+id/et_password"
                    android:textColor="@color/colorTextParagraph"
                    android:textSize="@dimen/text_size_normal"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:src="@drawable/ic_lock"/>

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|top"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textColor="@color/colorTextParagraph"
                    android:textSize="@dimen/text_size_normal"/>
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_sign_up"
        android:background="@color/colorPrimary"
        android:text="@string/login"
        android:textColor="@color/colorTextButton"
        android:textSize="@dimen/text_size_normal"/>

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorTextButton"
        android:text="@string/sign_up"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_normal"/>
</RelativeLayout>
